--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </header>
   <body>
     <div class="score-board">
-      <div id="user-label" class="badge">user</div>
-      <div id="computer-label" class="badge">comp</div>
+      <div id="user-label" class="badge">Player</div>
+      <div id="computer-label" class="badge">Computer</div>
       <span id="user-score"> 0 </span>: <span id="computer-score"> 0 </span>
     </div>
 
