--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       </div>
     </div>
 
-    <p id="action-message">Make your move</p>
+    <p id="action-message">
+      Make your move!<br />
+      Win against the machine!
+    </p>
     <script src="app.js"></script>
   </body>
 </html>
